--- a/index.html
+++ b/index.html
@@ -421,10 +421,11 @@
 <!-- ==================== -->
 <!-- TESTIMONIALS SECTION -->
 <!-- ==================== -->
+<!-- Testimonials Section -->
 <section class="testimonials-section" id="testimonials">
   <div class="container">
-    <h2 class="section-title" data-aos="fade-up">Client Success Stories</h2>
-    <p class="section-subtitle" data-aos="fade-up" data-aos-delay="100">Don't just take our word for it</p>
+    <h2 class="section-title" data-aos="fade-up">What Our Clients Say</h2>
+    <p class="section-subtitle" data-aos="fade-up" data-aos-delay="100">Trusted by 150+ businesses and creators</p>
     
     <div class="testimonials-wrapper">
       <div class="testimonials-carousel">
@@ -450,7 +451,7 @@
         </div>
 
         <!-- Testimonial 2 -->
-        <div class="testimonial-card" data-aos="zoom-in" data-aos-delay="200">
+        <div class="testimonial-card" data-aos="zoom-in" data-aos-delay="100">
           <div class="client-img">
             <img src="images/client2.jpg" alt="Priya Patel" loading="lazy">
           </div>
@@ -471,7 +472,7 @@
         </div>
 
         <!-- Testimonial 3 -->
-        <div class="testimonial-card" data-aos="zoom-in" data-aos-delay="300">
+        <div class="testimonial-card" data-aos="zoom-in" data-aos-delay="200">
           <div class="client-img">
             <img src="images/client3.jpg" alt="Arjun Mehta" loading="lazy">
           </div>
@@ -487,6 +488,68 @@
             <div class="client-info">
               <h4 class="client-name">Arjun Mehta</h4>
               <p class="client-role">Content Creator</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Testimonial 4 -->
+        <div class="testimonial-card" data-aos="zoom-in" data-aos-delay="300">
+          <div class="client-img">
+            <img src="images/client4.jpg" alt="Neha Gupta" loading="lazy">
+          </div>
+          <div class="testimonial-content">
+            <div class="rating">
+              <span class="star">★</span>
+              <span class="star">★</span>
+              <span class="star">★</span>
+              <span class="star">★</span>
+          </div>
+            <p class="testimonial-text">"Our sales increased by 70% after implementing Nedits' marketing strategy. Their team understands digital growth like no one else."</p>
+            <div class="client-info">
+              <h4 class="client-name">Neha Gupta</h4>
+              <p class="client-role">Marketing Director, UrbanFashion</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Testimonial 5 -->
+        <div class="testimonial-card" data-aos="zoom-in" data-aos-delay="400">
+          <div class="client-img">
+            <img src="images/client5.jpg" alt="Vikram Joshi" loading="lazy">
+          </div>
+          <div class="testimonial-content">
+            <div class="rating">
+              <span class="star">★</span>
+              <span class="star">★</span>
+              <span class="star">★</span>
+              <span class="star">★</span>
+              <span class="star">★</span>
+            </div>
+            <p class="testimonial-text">"The mobile app developed by Nedits has been downloaded 50,000+ times in first month itself. Flawless execution and brilliant UI/UX."</p>
+            <div class="client-info">
+              <h4 class="client-name">Vikram Joshi</h4>
+              <p class="client-role">CTO, FinTech Labs</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Testimonial 6 -->
+        <div class="testimonial-card" data-aos="zoom-in" data-aos-delay="500">
+          <div class="client-img">
+            <img src="images/client6.jpg" alt="Ananya Reddy" loading="lazy">
+          </div>
+          <div class="testimonial-content">
+            <div class="rating">
+              <span class="star">★</span>
+              <span class="star">★</span>
+              <span class="star">★</span>
+              <span class="star">★</span>
+              <span class="star">★</span>
+            </div>
+            <p class="testimonial-text">"Nedits' social media management brought us 5x more leads than our previous agency. Their content strategy is data-driven and creative."</p>
+            <div class="client-info">
+              <h4 class="client-name">Ananya Reddy</h4>
+              <p class="client-role">Founder, HealthPlus</p>
             </div>
           </div>
         </div>
@@ -508,7 +571,7 @@
     </div>
   </div>
 </section>
-
+  
 <!-- ==================== -->
 <!-- CONTACT US SECTION -->
 <!-- ==================== -->
