--- a/index.html
+++ b/index.html
@@ -421,12 +421,11 @@
 <!-- ==================== -->
 <!-- TESTIMONIALS SECTION -->
 <!-- ==================== -->
-<!-- Testimonials Section -->
 <section class="testimonials-section" id="testimonials">
   <div class="container">
     <h2 class="section-title" data-aos="fade-up">What Our Clients Say</h2>
     <p class="section-subtitle" data-aos="fade-up" data-aos-delay="100">Trusted by 150+ businesses and creators</p>
-    
+
     <div class="testimonials-wrapper">
       <div class="testimonials-carousel">
         <!-- Testimonial 1 -->
@@ -436,13 +435,9 @@
           </div>
           <div class="testimonial-content">
             <div class="rating">
-              <span class="star">★</span>
-              <span class="star">★</span>
-              <span class="star">★</span>
-              <span class="star">★</span>
-              <span class="star">★</span>
+              ★★★★★
             </div>
-            <p class="testimonial-text">"Nedits transformed our brand identity completely. Their designs helped us increase our social media engagement by 300% in just 2 months!"</p>
+            <p class="testimonial-text">"Nedits transformed our brand identity completely. Our social media engagement skyrocketed!"</p>
             <div class="client-info">
               <h4 class="client-name">Rahul Sharma</h4>
               <p class="client-role">CEO, TechStart Solutions</p>
@@ -456,14 +451,8 @@
             <img src="images/client2.jpg" alt="Priya Patel" loading="lazy">
           </div>
           <div class="testimonial-content">
-            <div class="rating">
-              <span class="star">★</span>
-              <span class="star">★</span>
-              <span class="star">★</span>
-              <span class="star">★</span>
-              <span class="star">★</span>
-            </div>
-            <p class="testimonial-text">"The website Nedits built for our e-commerce store increased our conversion rate by 45%. Their attention to detail is remarkable."</p>
+            <div class="rating">★★★★★</div>
+            <p class="testimonial-text">"Their e-commerce design gave us a 45% boost in conversions. Amazing eye for detail!"</p>
             <div class="client-info">
               <h4 class="client-name">Priya Patel</h4>
               <p class="client-role">Founder, StyleHub</p>
@@ -477,14 +466,8 @@
             <img src="images/client3.jpg" alt="Arjun Mehta" loading="lazy">
           </div>
           <div class="testimonial-content">
-            <div class="rating">
-              <span class="star">★</span>
-              <span class="star">★</span>
-              <span class="star">★</span>
-              <span class="star">★</span>
-              <span class="star">★</span>
-            </div>
-            <p class="testimonial-text">"Their video editing services took our YouTube channel from 10k to 100k subscribers in 6 months. The thumbnails and editing style are perfect!"</p>
+            <div class="rating">★★★★★</div>
+            <p class="testimonial-text">"We gained over 90k new subscribers thanks to their editing and thumbnail design!"</p>
             <div class="client-info">
               <h4 class="client-name">Arjun Mehta</h4>
               <p class="client-role">Content Creator</p>
@@ -498,13 +481,8 @@
             <img src="images/client4.jpg" alt="Neha Gupta" loading="lazy">
           </div>
           <div class="testimonial-content">
-            <div class="rating">
-              <span class="star">★</span>
-              <span class="star">★</span>
-              <span class="star">★</span>
-              <span class="star">★</span>
-          </div>
-            <p class="testimonial-text">"Our sales increased by 70% after implementing Nedits' marketing strategy. Their team understands digital growth like no one else."</p>
+            <div class="rating">★★★★☆</div>
+            <p class="testimonial-text">"Nedits delivered a smart marketing strategy that really helped scale our product."</p>
             <div class="client-info">
               <h4 class="client-name">Neha Gupta</h4>
               <p class="client-role">Marketing Director, UrbanFashion</p>
@@ -518,14 +496,8 @@
             <img src="images/client5.jpg" alt="Vikram Joshi" loading="lazy">
           </div>
           <div class="testimonial-content">
-            <div class="rating">
-              <span class="star">★</span>
-              <span class="star">★</span>
-              <span class="star">★</span>
-              <span class="star">★</span>
-              <span class="star">★</span>
-            </div>
-            <p class="testimonial-text">"The mobile app developed by Nedits has been downloaded 50,000+ times in first month itself. Flawless execution and brilliant UI/UX."</p>
+            <div class="rating">★★★★★</div>
+            <p class="testimonial-text">"Great UI/UX and development. The app reached 50,000 downloads within weeks!"</p>
             <div class="client-info">
               <h4 class="client-name">Vikram Joshi</h4>
               <p class="client-role">CTO, FinTech Labs</p>
@@ -539,22 +511,107 @@
             <img src="images/client6.jpg" alt="Ananya Reddy" loading="lazy">
           </div>
           <div class="testimonial-content">
-            <div class="rating">
-              <span class="star">★</span>
-              <span class="star">★</span>
-              <span class="star">★</span>
-              <span class="star">★</span>
-              <span class="star">★</span>
-            </div>
-            <p class="testimonial-text">"Nedits' social media management brought us 5x more leads than our previous agency. Their content strategy is data-driven and creative."</p>
+            <div class="rating">★★★★★</div>
+            <p class="testimonial-text">"Nedits' social media team brought 5x more leads than our previous agency."</p>
             <div class="client-info">
               <h4 class="client-name">Ananya Reddy</h4>
               <p class="client-role">Founder, HealthPlus</p>
             </div>
           </div>
         </div>
+
+        <!-- Testimonial 7 -->
+        <div class="testimonial-card" data-aos="zoom-in" data-aos-delay="600">
+          <div class="client-img">
+            <img src="images/client7.jpg" alt="Rohan Kapoor" loading="lazy">
+          </div>
+          <div class="testimonial-content">
+            <div class="rating">★★★★☆</div>
+            <p class="testimonial-text">"Clean branding, fast delivery. Slight delay in revisions, but excellent output."</p>
+            <div class="client-info">
+              <h4 class="client-name">Rohan Kapoor</h4>
+              <p class="client-role">Co-Founder, EcoWave</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Testimonial 8 -->
+        <div class="testimonial-card" data-aos="zoom-in" data-aos-delay="700">
+          <div class="client-img">
+            <img src="images/client8.jpg" alt="Tanvi Desai" loading="lazy">
+          </div>
+          <div class="testimonial-content">
+            <div class="rating">★★★★★</div>
+            <p class="testimonial-text">"Love their designs! Every graphic felt customized to our brand’s voice."</p>
+            <div class="client-info">
+              <h4 class="client-name">Tanvi Desai</h4>
+              <p class="client-role">Brand Manager, AuraCosmetics</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Testimonial 9 -->
+        <div class="testimonial-card" data-aos="zoom-in" data-aos-delay="800">
+          <div class="client-img">
+            <img src="images/client9.jpg" alt="Kabir Arora" loading="lazy">
+          </div>
+          <div class="testimonial-content">
+            <div class="rating">★★★☆☆</div>
+            <p class="testimonial-text">"Good work overall. Some issues with initial drafts, but they fixed everything professionally."</p>
+            <div class="client-info">
+              <h4 class="client-name">Kabir Arora</h4>
+              <p class="client-role">Founder, QuickKitchen</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Testimonial 10 -->
+        <div class="testimonial-card" data-aos="zoom-in" data-aos-delay="900">
+          <div class="client-img">
+            <img src="images/client10.jpg" alt="Isha Verma" loading="lazy">
+          </div>
+          <div class="testimonial-content">
+            <div class="rating">★★★★★</div>
+            <p class="testimonial-text">"Creative, fast, and professional. Our brand’s Instagram now looks stunning."</p>
+            <div class="client-info">
+              <h4 class="client-name">Isha Verma</h4>
+              <p class="client-role">Social Media Head, BloomKids</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Testimonial 11 -->
+        <div class="testimonial-card" data-aos="zoom-in" data-aos-delay="1000">
+          <div class="client-img">
+            <img src="images/client11.jpg" alt="Nikhil Sen" loading="lazy">
+          </div>
+          <div class="testimonial-content">
+            <div class="rating">★★★★☆</div>
+            <p class="testimonial-text">"Very happy with the outcome. Communication was smooth, delivery on point."</p>
+            <div class="client-info">
+              <h4 class="client-name">Nikhil Sen</h4>
+              <p class="client-role">Product Manager, FlexFit</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Testimonial 12 -->
+        <div class="testimonial-card" data-aos="zoom-in" data-aos-delay="1100">
+          <div class="client-img">
+            <img src="images/client12.jpg" alt="Sneha Bhatt" loading="lazy">
+          </div>
+          <div class="testimonial-content">
+            <div class="rating">★★★★★</div>
+            <p class="testimonial-text">"Nedits is our go-to for all visual needs. They just get our aesthetic every time."</p>
+            <div class="client-info">
+              <h4 class="client-name">Sneha Bhatt</h4>
+              <p class="client-role">Founder, ArtTales</p>
+            </div>
+          </div>
+        </div>
       </div>
-      
+
+      <!-- Carousel Controls -->
       <div class="carousel-controls">
         <button class="carousel-prev" aria-label="Previous testimonial">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
